change jarvis to aarvis

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -103,8 +103,8 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-12 h100 infodiv2">
                             <div class="wakeJarvis">
-                                <button type="button" class="show" id="wakejarvis">Wake up Jarvis</button>
-                                <button type="button" class="hide" id="sleepjarvis">Sleep Jarvis</button>
+                                <button type="button" class="show" id="wakejarvis">Wake up Aarvis</button>
+                                <button type="button" class="hide" id="sleepjarvis">Sleep Aarvis</button>
                             </div>
                             <div class="otherinfo">
 
